// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disable 1`] = `
<button
  className="btn btn-light btn-sm"
  disabled={true}
  type="button"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M368.5 240h-225c-8.8 0-16 7.2-16 16 0 4.4 1.8 8.4 4.7 11.3 2.9 2.9 6.9 4.7 11.3 4.7h225c8.8 0 16-7.2 16-16s-7.2-16-16-16z"
    />
  </svg>
</button>
`;

exports[`IconButton simple 1`] = `
<button
  className="btn btn-light btn-sm"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12,22 L12,2 M2,12 L22,12"
      fill="none"
      stroke="#000"
      strokeWidth="2"
    />
  </svg>
</button>
`;
